--- a/docker-compose-dev.yml
+++ b/docker-compose-dev.yml
@@ -14,3 +14,12 @@ services:
       - 3002:3000
     environment:
       - CHOKIDAR_USEPOLLING=true
+
+# docker-react-test:
+#   container_name: docker-react-dev
+#   image: docker-react-crm_docker-react-dev
+#   volumes:
+#     - '/app/node_modules'
+#     - '.:/app'
+#   command: ["npm", "run", test"]
+    
